2888 [Main]                 changed File\Exit shortcut from CTRL+X to ALT+F4
2887 [Worker]               improved the priority system so that for each job type the process and I/O priority can be defined
                            changing the priority in the progress window does change it only for the current job
                            moved some settings from options\settings to worker\settings (these will reset to default)
     [OneClick]             improved priority change and job abort actions
     [L-SMASH Indexer]      improved priority change and job abort actions
2886 [Jobs]                 fixed abort of suspended jobs (regression of 2818)
2885 [Preset Exporter]      fixed overwrite of output files
2884 [Worker]               changed worker handling
                            - in "workers\settings" worker rule sets can be specified
                              based on those rules it is determined how many jobs of which type are allowed to run in parallel
                              also on that page the maximum number of workers can be set (default: 2)
                            - temporary workers ignore all restrictions
                            - removed several obsolete worker windows and options
2883 [IFOParser]            improved subtitle detection. bug #925
2882 [OneClick]             fixed only using at maximum 2 audio/subtible tracks in batch mode (regression of 2861). bug #927
2881 [HD Streams Extractor] force "-keepDialnorm" if required for a E-AC3 tracks
2880 [AVS Script Creator]   fixed initial MediaInfo warning (regression of 2877)
2879 [Queue]                improved power save mode supression (requires at least Windows 7)
2878 [MediaInfo]            improved track detection of Blu-ray playlists
2877 [OneClick]             added support for VFR input files (requires mkv/mp4 output)
     [FFMS Indexer]         added support for VFR input files