@@ -58,9 +58,8 @@ namespace MeGUI
         public x264Encoder(string encoderPath) : base()
         {
             executable = encoderPath;
-            iMinimumChildProcessCount = 1;
             if (UseWrapper())
-                iMinimumChildProcessCount = 2;
+                iMinimumChildProcessCount = 1;
         }
 
         public override void ProcessLine(string line, StreamType stream, ImageType oType)
